# gcc-algol

al60l/: MANIFEST  Makefile  TODO  ast-fwd.h  ast-test.c  ast.c  ast.h  ast.tc  cursor.c  cursor.h  estring.c  estring.h  expr_types.tc  expression.tc  gcc.tc  grammar  label.c  label.h  label.tc  lexer-tab.c  lexer-tab.h  lexer-test.c  lexer.h  lexer.l  logger.c  logger.h  parser-tab.c  parser-tab.h  parser-test.c  parser.h  parser.y  pd.h  slist.c  slist.h  statement.tc  symbol.c  symbol.h  symbol.tc  type.c  type.h  (+3 more)
al60l/testsuite/compile/: 09.a60  balance2.a60  decl1.a60  labels1.a60  labels2.a60
al60l/testsuite/fail/: 01.a60  07.a60  10.a60
al60l/testsuite/parse/: 05.a60  06.a60  decls1.a60
al60l/torture/: torture.sh
al60l/torture/compile/: 01.a60  02.a60  03.a60  04.a60  07.a60  08.a60  10.a60
al60l/torture/fail/: 03.a60  04.a60
al60l/torture/parse/: 01.a60  02.a60  04.a60  05.a60  06.a60  07.a60  08.a60
doc/: Makefile  PIOCA60.tex  RRA60.tex  demo-1.tex  demo-2.tex  design-1.dia  dp.bib  dp.tex  eeict.cls  eeict.dtx  eeict.ins  eeict.tex  fitprj.cls  showcase.tex  size-pdf-as-ps.sh
gcc/: dist.sh  gcc-4.2.0-toplevel.patch  gcc-4.3.0-toplevel.patch  gcc-configuration-command
gcc/algol60/: INSTALL  Make-lang.in  al601.c  al60l-bind.c  al60l-bind.h  algol-tree.c  algol-tree.h  algol60.texi  algol601.c  ast.tc  boundspair.c  boundspair.h  boundspair.i  config-lang.in  cursor.c  cursor.h  cursor.i  estring.c  estring.h  estring.i  expr-binop.def  expr_types.tc  expression.c  expression.h  expression.i  expression.tc  ga60.texi  gcc.tc  label.c  label.h  label.i  label.tc  lang-specs.h  lang.c  lang.h  lang.opt  lexer.h  lexer.l  logger.c  logger.h  (+23 more)
gcc/algol60/testsuite/: torture.sh
gcc/algol60/testsuite/compile/: array1.a60
gcc/algol60/testsuite/fail/: array2.a60  array3.a60  assign1.a60  stringvar.a60  types2.a60  types3.a60
gcc/algol60/testsuite/parse/: internals1.a60  prec1.a60
gcc/gcc/algol60/: Doxyfile  INSTALL  Make-lang.in  a60_spec.c  a60_symtab.c  a60_symtab.h  a60_symtab.i  al60l-bind.c  al60l-bind.h  algol-tree.c  algol-tree.h  boundspair.c  config-lang.in  cursor.c  cursor.h  cursor.i  desig-expr.c  desig-expr.h  desig-expr.i  estring.c  expr-unop.def  expression.c  expression.h  expression.i  for-elmt.c  for-elmt.h  for-elmt.i  ga60.texi  label.c  label.h  lang-specs.h  lang.c  lang.opt  lexer.h  lexer.l  logger.c  logger.h  meta.c  meta.h  parser.h  (+17 more)
gcc/gcc/testsuite/algol60.dg/: dg.exp
gcc/gcc/testsuite/algol60.dg/compile/: assign2.a60  assign3.a60  assign4.a60  assign5.a60  forstmt1.a60  forstmt2.a60  forstmt3.a60  forstmt4.a60  forstmt5.a60  forstmt6.a60  forstmt7.a60  forstmt8.a60  fun1.a60  goto1.a60  goto2.a60  goto3.a60  goto4.a60  goto5.a60  goto6.a60  ifexpr2.a60  ifstmt1.a60  ifstmt2.a60  ifstmt4.a60  ifstmt5.a60  labels1.a60  labels2.a60  out1.a60  own1.a60  prec1.a60  preproc.ALG  switch1.a60
gcc/gcc/testsuite/algol60.dg/fail/: array2.a60  assign1.a60  dupdecl1.a60  forstmt1.a60  forstmt2.a60  forstmt3.a60  fun1.a60  fun2.a60  ifstmt1.a60  ifstmt2.a60  labels1.a60  labels2.a60  stringvar.a60
gcc/gcc/testsuite/lib/: algol60-dg.exp  algol60.exp
gcc/libga60/: Makefile.am  Makefile.in  abs.c  acinclude.m4  aclocal.m4  apow.c  autogen.sh  config.h.in  configure  configure.ac  entier.c  libc-bind.c  libtool-version  sign.c
gcc/testsuite/algol60.dg/: assign1.a60  balance1.a60  balance2.a60  dg.exp  internals1.a60
gcc/testsuite/algol60.dg/compile/: array1.a60  assign1.a60  decl1.a60  decls1.a60  ifexpr1.a60  ifexpr2.a60  labels3.a60  prec1.a60
gcc/testsuite/algol60.dg/fail/: array1.a60  array3.a60  array4.a60  array5.a60  balance1.a60  internals1.a60  types2.a60
gcc/testsuite/lib/: algol60-dg.exp  algol60.exp
